Generating the replacement for IT modernization file

--- a/it_modernization/roundups.yaml
+++ b/it_modernization/roundups.yaml
@@ -228,3 +228,52 @@
     Thomas Shedd: GSA
     Brad Smith: EOP
     Christopher Stanley: EOP
+
+# House Judiciary
+- title: FOIA request to DOGE from the House Judiciary Committee
+  publisher: House Judiciary Committee Democratic members
+  last_updated: 2025-03-17
+  source: https://democrats-judiciary.house.gov/uploadedfiles/2025-03-17_raskin_connolly_foia_request.pdf
+  people:
+    Elon Musk: DOGE
+    Amy Gleason: DOGE
+    Justin Aimonetti: DOGE
+    Jacob Altik: DOGE
+    Anthony Armstrong: DOGE
+    Jennifer Balajadia: DOGE
+    Alexandra Beynon: DOGE
+    Riccardo Biasini: DOGE
+    Akash Bobba: DOGE
+    Ashley Boizelle: DOGE
+    Emily Bryant: DOGE
+    James Burnham: DOGE
+    Edward Coristine: DOGE
+    Steve Davis: DOGE
+    Marko Elez: DOGE
+    Luke Farritor: DOGE
+    Joshua Fox: DOGE
+    Antonio Gracias: DOGE
+    Joshua Hanley: DOGE
+    Stephanie Holmes: DOGE
+    Erica Jehling: DOGE
+    Cole Killian: DOGE
+    Gavin Kliger: DOGE
+    Keenan Kmiec: DOGE
+    Nicholas Lahera: DOGE
+    Scott Langmack: DOGE
+    Jeremy Lewin: DOGE
+    Kendall Lindemann: DOGE
+    Katie Miller: DOGE
+    Noah Peters: DOGE
+    Nikhil Rajpal: DOGE
+    Adam Ramada: DOGE
+    Austin Raynor: DOGE
+    Mike Russo: DOGE
+    Kyle Schutt: DOGE
+    Ethan Shaotran: DOGE
+    Brad Smith: DOGE
+    Christopher Stanley: DOGE
+    Thomas Shedd: DOGE
+    Jordan Wick: DOGE
+    Ryan Wunderly: DOGE
+    Chris Young: DOGE
