--- a/it_modernization/systems.yaml
+++ b/it_modernization/systems.yaml
@@ -51,6 +51,7 @@
 - name: USCIS Data Business Intelligence Services
   id: DBIS
   agency: USCIS
+  description: FIXME
 
 - name: Debt Management and Collection System
   id: DMCS
