--- a/it_modernization/agencies.yaml
+++ b/it_modernization/agencies.yaml
@@ -83,6 +83,12 @@
 - name: Federal Housing Finance Agency
   id: FHFA
 
+- name: Federal Communications Commission
+  id: FCC
+
+- name: Federal Trade Commission
+  id: FTC
+
 - name: Food and Drug Administration
   id: FDA
   parent_id: HHS
@@ -134,6 +140,9 @@
 - name: Office of Personnel Management
   id: OPM
 
+- name: Peace Corps
+  id: Peace
+
 - name: Securities and Exchange Commission
   id: SEC
 
@@ -165,3 +174,6 @@
 
 - name: US Postal Service
   id: USPS
+
+- name: Veterans Administration
+  id: VA
