--- a/it_modernization/data/agencies.yaml
+++ b/it_modernization/data/agencies.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=schemas/agencies-file.json
+# yaml-language-server: $schema=../schemas/agencies-file.json
 - name: Centers for Disease Control and Prevention
   id: CDC
   parent_id: HHS
