Change ID for Dept. of Energy

--- a/it_modernization/data/cases.yaml
+++ b/it_modernization/data/cases.yaml
@@ -246,7 +246,7 @@
   agency: OPM
 
 - name: State of New York v. McMahon (D.Mass)
-  description: Twenty states and the District of Columbia requested the court to halt the announced Department of Education (DOE) and the Trump administration's planned Reduction in Force (RIF) of half of the remaining employees of the DOE and closure of the DOE.
+  description: Twenty states and the District of Columbia requested the court to halt the announced Department of Education and the Trump administration's planned Reduction in Force (RIF) of half of the remaining employees and closure of the DOE.
   case_no: 1:25-cv-10601
   date_filed: 2025-03-13
   link: https://www.courtlistener.com/docket/69732750/state-of-new-york-v-mcmahon/
